@startuml

title __ADAPTER's Class Diagram__\n

  namespace com.ustc.location {
    namespace adapter {
      class com.ustc.location.adapter.PaintToolAdapter {
          - opts : String[]
          + PaintToolAdapter()
          + getItemCount()
          + onBindViewHolder()
          + onCreateViewHolder()
      }
    }
  }
  

  namespace com.ustc.location {
    namespace adapter {
      class com.ustc.location.adapter.PaintToolAdapter.MyViewHolder {
          - textView : TextView
          + MyViewHolder()
      }
    }
  }
  

  namespace com.ustc.location {
    namespace adapter {
      abstract class com.ustc.location.adapter.RecyclerViewHolder {
          + RecyclerViewHolder()
          + RecyclerViewHolder()
          + setItemOnClickListener()
      }
    }
  }
  

  namespace com.ustc.location {
    namespace adapter {
      interface com.ustc.location.adapter.RecyclerViewHolder.RVItemClickListener {
          {abstract} + onItemClick()
      }
    }
  }
  

  com.ustc.location.adapter.PaintToolAdapter -up-|> android.support.v7.widget.RecyclerView.Adapter
  com.ustc.location.adapter.PaintToolAdapter o-- com.ustc.location.adapter.RecyclerViewHolder.RVItemClickListener : listener
  com.ustc.location.adapter.PaintToolAdapter +-down- com.ustc.location.adapter.PaintToolAdapter.MyViewHolder
  com.ustc.location.adapter.PaintToolAdapter.MyViewHolder -up-|> com.ustc.location.adapter.RecyclerViewHolder
  com.ustc.location.adapter.RecyclerViewHolder -up-|> android.support.v7.widget.RecyclerView.ViewHolder
  com.ustc.location.adapter.RecyclerViewHolder o-- com.ustc.location.adapter.RecyclerViewHolder.RVItemClickListener : listener
  com.ustc.location.adapter.RecyclerViewHolder +-down- com.ustc.location.adapter.RecyclerViewHolder.RVItemClickListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
